--- a/data/projects/bpi.mdx
+++ b/data/projects/bpi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Bitcoin Policy Institute'
 dateAdded: '2022-09-22'
-summary: 'Bitcoin Policy Institute supports academic research on Bitcoin and conducts advocacy in Washington D.C.'
+summary: 'A think tank studying the future of money.'
 nym: 'Grant McCarty'
 website: 'https://www.btcpolicy.org/'
 coverImage: '/img/project/bpi.png'
@@ -16,38 +16,4 @@ tags: ['Bitcoin', 'Politics']
 
 ## About this project
 
-The prevailing narrative in Washington is that Bitcoin harms the environment, threatens national security, and hurts consumers — helping only criminals and speculators. Left unchecked, these narratives will continue to form the tailwinds for policy with grave consequences for American Bitcoiners. Since forming in January, the Bitcoin Policy Institute has been advancing a different vision in D.C.– one of an America strengthened by Bitcoin. 
-
-BPI was instrumental in responding to the Biden Executive Order on Digital Assets, providing in-depth reports detailing the benefits of Bitcoin and meeting privately with White House officials to offer guidance on key issues. They facilitated a groundbreaking letter to Congress from 21 global human rights leaders explaining how Bitcoin saves lives and protects those facing political repression and economic crisis. Moving forward, BPI hopes to bolster its presence in Washington and expand its research and advocacy. 
-
-As part of BPI’s fundraising collaboration with Swan Bitcoin, they are aiming to raise $100k from the pleb community to help support academic research on Bitcoin.
-
-Campaign Stretch Goals:
-
-$10,000 - Research Grant to Study Proof of Work's Environmental Impact
-
-$20,000 - Research Grant to Study Bitcoin's Long-Term Global Impact
-
-$25,000 - Funding Up to 10 Academic Journal Submissions for BPI Fellows
-
-$45,000 - “Buying Out” a BPI Fellow’s Courseload (i.e. Paying for a BPI Fellow to take the semester off of teaching and focus on bitcoin research full-time)
-
-$55,000 - Research Grant to Study Sustainability in Bitcoin Mining
-
-$75,000 - “Buying Out” a SECOND BPI Fellow’s Courseload
-
-$80,000 - Funding 10 More Academic Journal Submissions for BPI Fellows
-
-$100,000 - “Buying Out” a THIRD BPI Fellow’s Courseload
-
-But academic research is only part of the battle. In order to effect change at scale, BPI needs to go toe to toe with the big players in Washington. Their ultimate fundraising goal for the calendar year is $1,000,000.
-
-Fundraising Goals:
-
-$250,000 - Funds BPI Operations, Research, and Advocacy in DC for 3 Months
-
-$500,000 - Funds BPI Operations, Research, and Advocacy in DC for 6 Months
-
-$750,000 - Funds BPI Operations, Research, and Advocacy in DC for 9 Months
-
-$1,000,000 - Funds BPI Operations, Research, and Advocacy in DC for 12 Months
+A team of economists, technologists, climate scientists, lawyers, and philosophers who are working to provide relevant insights to policymakers, journalists, and the public. Topics include national security and geoeconomics, financial inclusion and human rights, the future of money, and mining & energy.
