--- a/data/projects/bdk.mdx
+++ b/data/projects/bdk.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Bitcoin Dev Kit'
 dateAdded: '2022-12-29'
-summary: 'Seamlessly build cross-platform mobile wallets.'
+summary: 'Seamlessly build cross-platform mobile Bitcoin wallets.'
 nym: 'Alekos Filini'
 website: 'https://bitcoindevkit.org/'
 coverImage: '/img/project/bdk.jpeg'
@@ -14,4 +14,4 @@ tags: ['Bitcoin', 'Library']
 
 ## About this project
 
-BDK is the simplest way to integrate Bitcoin wallet features into any application, with native APIs for C, Swift, Java, and Kotlin. Designed from the ground up to be easily customized to application needs, with all of the low-level Bitcoin logic being handled by BDK so you can focus on custom-tailored user experiences.
+BDK is the simplest way to integrate Bitcoin wallet features into any application, with native APIs for C, Swift, Java, and Kotlin programming languages. Designed from the ground up to be easily customized to application needs, with all of the low-level Bitcoin logic being handled by BDK so you can focus on custom-tailored user experiences.
