--- a/data/projects/bdk.mdx
+++ b/data/projects/bdk.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Bitcoin Dev Kit'
 dateAdded: '2022-12-29'
-summary: 'The goal of the Bitcoin Dev Kit (BDK) project (originally called Magical Bitcoin 🧙) is to provide libraries and tools that make it 10x easier to build secure, full featured, cross-platform on-chain Bitcoin wallets. All BDK components are designed to be lightweight and modular so that they can be adapted for virtually any use-case: from single-sig mobile wallets to multi-billion-dollar cold storage vaults.'
+summary: 'Seamlessly build cross-platform mobile Bitcoin wallets.'
 nym: 'Alekos Filini'
 website: 'https://bitcoindevkit.org/'
 coverImage: '/img/project/bdk.jpeg'
@@ -14,4 +14,4 @@ tags: ['Bitcoin', 'Library']
 
 ## About this project
 
-Bitcoin Development Kit (BDK) is a set of libraries and tools that allows you to seamlessly build cross-platform on-chain Bitcoin wallets without having to re-implement standard bitcoin data structures, algorithms, and protocols. We partner closely with the Lightning Dev Kit (LDK) team to help projects building on-chain and off-chain wallets. BDK is built on top of the powerful rust-bitcoin and rust-miniscript libraries and adds features for managing descriptor based wallets, syncing wallets to the bitcoin blockchain, viewing transaction histories, managing and selecting utxos to create new transactions, signing, and more. The core BDK components are written in Rust, but the team also maintains Kotlin and Swift language binding for use in mobile projects. Plus we maintain Python bindings and React Native and Flutter support is being developed. 😃 Join our community Open source is fundamental to this project and we would love to connect with you. Whether you're a Rust, Kotlin, Swift, or Python developer, or good at technical writing, web design or want to help via manual testing. Everyone is welcome. Most of our communication happens on the Bitcoin Dev Kit discord server, say hi!
+BDK is the simplest way to integrate Bitcoin wallet features into any application, with native APIs for C, Swift, Java, and Kotlin programming languages. Designed from the ground up to be easily customized to application needs, with all of the low-level Bitcoin logic being handled by BDK so you can focus on custom-tailored user experiences.
