--- a/data/projects/btcpayserver.mdx
+++ b/data/projects/btcpayserver.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'BTCPay Server'
 dateAdded: '2022-09-22'
-summary: 'Free, open-source & self-hosted bitcoin payment gateway that allows self-sovereign individuals and businesses to accept bitcoin payments online or in person without any fees.'
+summary: 'Start accepting Bitcoin payments with 0% fees & no third-party.'
 nym: 'BTCPay Server Foundation'
 website: 'https://btcpayserver.org/'
 coverImage: '/static/images/projects/btcpayserver.png'
@@ -15,4 +15,4 @@ tags: ['Bitcoin', 'Lightning', 'Wallet', 'Node', 'Commerce', 'Infrastructure']
 
 ## About this project
 
-BTCPay Server provides numerous features for self-sovereign individuals and businesses: Direct, peer-to-peer Bitcoin payments | No transaction fees (other than the network fee) | No fees, middleman or KYC | Non-custodial (complete control over the private key) | Lightning Network support (LND, c-lightning, Eclair, and Ptarmigan) | Tor support | Share your instance with friends (multi-tenant) | Invoice management and Payment requests | Apps: Point of sale, crowdfunding, donation button | Full-node reliant wallet with hardware wallet integration and SegWit support | Payjoin Support
+BTCPay Server is a self-hosted, open-source cryptocurrency payment processor. It's secure, private, censorship-resistant, and free. Simply launch a server (cloud, your own hardware device, or an existing host), connect your e-commerce store or one of many apps, and funds arrive directly to your connected wallet. Simple to use with native wallet management, and great for invoicing and accounting.
