--- a/data/projects/cashu.mdx
+++ b/data/projects/cashu.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Cashu'
 dateAdded: '2023-04-20'
-summary: 'Cashu is a Chaumian ecash system for Bitcoin.'
+summary: 'Cashu brings near-perfect privacy for users of custodial Bitcoin applications by using a Chaumian ecash system.'
 nym: 'Calle'
 website: 'https://cashu.space/'
 coverImage: '/static/images/projects/cashu.jpeg'
@@ -14,4 +14,4 @@ tags: ['Bitcoin', 'Lightning', 'ecash']
 
 ## About this project
 
-Cashu is a free and open-source Chaumian ecash system built for Bitcoin that brings near-perfect privacy for users of custodial Bitcoin applications. A Cashu ecash mint does not know who you are, what your balance is, or who you're transacting with. Users of a mint can exchange ecash privately without anyone being able to know who the involved parties are. Bitcoin payments are executed without anyone able to censor specific users. There are multiple implementations of the Cashu protocol. Cashu is available as a command line interface (CLI) tool and as Progressive Web Apps (PWA) with a graphical user interface. Multiple Cashu libraries are available for Python, Golang, Javascript, and Typescript. The client libraries make it easy for developers to write their own wallets. As a Free and Open-Source Software Project, Cashu libraries can be used to integrate ecash into existing Bitcoin projects. The Cashu NUTs (Notation, Usage, and Terminology) documents are the protocol specifications: https://github.com/cashubtc/nuts
+Cashu is built for Bitcoin and deeply integrated with the Lightning network. Wallets use the mint’s Lightning node for sending and receiving Bitcoin payments anonymously in exchange for ecash. This means that Cashu wallets can be used as regular Bitcoin Lightning wallets but with the added benefit of nearly perfect privacy. A Cashu mint doesn’t know who you are, what your balance is, or who you’re transacting with.
