--- a/data/projects/ronin_dojo.mdx
+++ b/data/projects/ronin_dojo.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'RoninDojo'
 dateAdded: '2022-04-02'
-summary: 'We help people have a feature rich bitcoin experience, maintain privacy, and thrive as a sovereign individual.'
+summary: 'RoninDojo helps bitcoiners have a feature-rich bitcoin experience, maintain privacy, and thrive as sovereign individuals by developing easy-to-use hardware (such as the Tanto full bitcoin node) and software (RoninUI which uses TOR by default).'
 nym: 'BTCxZelko'
 website: 'https://ronindojo.io/'
 coverImage: '/static/images/projects/ronin_dojo.png'
@@ -15,4 +15,4 @@ tags: ['Bitcoin', 'Privacy']
 
 ## About this project
 
-RoninDojo develops hardware and software to make it easy for anyone to use bitcoin privately as if it were cash. Some of our products include bitcoin nodes, steel backup plates, powerful software, premium support, and a lot more coming soon. We are working hard to increase accessibility for bitcoin users to connect their wallet to a node, use privacy enhancing coinjoin, do their own self custody, and so much more. Financial sovereignty is our goal and we won't slow down until it is achieved!
+RoninDojo products include Bitcoin nodes, steel backup plates, powerful storage, premium support, and much more coming soon. RoninDojo works hard to increase accessibility for bitcoiners to connect their wallet to a node, use privacy-enhancing coinjoin, and do self-custody.
