--- a/data/projects/stratumv2.mdx
+++ b/data/projects/stratumv2.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Stratum V2'
 dateAdded: '2023-03-16'
-summary: 'An independent, community run, 100% free and open-source reference implementation of the Stratum V2 protocol.'
+summary: 'The next generation of pooled mining.'
 nym: 'Fi3'
 website: 'https://stratumprotocol.org/'
 coverImage: '/static/images/projects/stratumv2.jpg'
@@ -15,4 +15,4 @@ tags: ['Bitcoin', 'Privacy', 'Protocol', 'Mining']
 
 ## About this project
 
-SRI is Stratum v2 reference implementation, that is free and open-source. Before Stratum V2, transaction sets were selected by pools. With this SV2 configuration they’re selected by individual miners, making the network more censorship-resistant. Miners run SV2 firmware, connecting to the SV2 proxy server. Miners can pick their transactions locally and negotiate them with an SV2 pool. Stratum V2 is the next generation protocol for pooled mining. It increases security, makes data transfers more efficient, and reduces mining infrastructure requirements. It also introduces three new sub-protocols that let miners select transaction sets and improve decentralization.
+Stratum V2 increases security, makes data transfers more efficient, and reduces mining infrastructure requirements. It also introduces three new sub-protocols that let miners select transaction sets and improve decentralization. Previously, transaction sets were selected by pools. With Stratum V2 the transaction sets are selected by individual miners, leading to a more censorship-resistant network.
