--- a/data/projects/summerofbitcoin.mdx
+++ b/data/projects/summerofbitcoin.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Summer of Bitcoin'
 dateAdded: '2023-04-20'
-summary: 'Summer of Bitcoin is a global summer internship program focused on introducing university students to bitcoin open-source development and design. Till date, Summer of Bitcoin has funded 124 students from 15 countries to contribute to over 29 open-source bitcoin projects.'
+summary: 'A global, online summer internship program focused on introducing university students to Bitcoin open-source development and design.'
 nym: 'Adi Shankara'
 website: 'https://www.summerofbitcoin.org/'
 coverImage: '/static/images/projects/summerofbitcoin.jpeg'
@@ -14,4 +14,6 @@ tags: ['Bitcoin', 'Education']
 
 ## About this project
 
-What is Summer of Bitcoin? Summer of Bitcoin is a global summer internship program to introduce university students to bitcoin open-source development and design. Till date, Summer of Bitcoin has funded 124 students from 15 countries to contribute to over 29 open-source bitcoin projects. How does it work? University students apply for a summer internship program where they contribute code or design for bitcoin-related projects matching their interests, earn bitcoin as stipend and put their summer break to good use. The project communities provide mentors who guide students through the entire summer, helping students learn about the community and contribute. What’s in it for students? - Learn about bitcoin and open-source development - Build a network with bitcoiners around the world - Earn bitcoin - Become open-source contributors or join the bitcoin industry - Contribute to monetary revolution! What’s in it for participating projects and their associated mentors? - More code and more code reviews - Identify and bring in new full-time contributors - Contribute to monetary revolution!
+How it works:
+
+Interested students apply to a program track (Developer or Designer) based on their background and go through a screening round. Screened students learn how Bitcoin works from a curated set of resources and submit a project proposal. Accepted students contribute to Bitcoin open-source projects. Students who perform exceptionally well are referred for a career in Bitcoin. Over 50K+ lines of open-source code contributed!
