--- a/data/projects/thunderhub.mdx
+++ b/data/projects/thunderhub.mdx
@@ -15,4 +15,4 @@ tags: ['Bitcoin', 'Lightning', 'Node']
 
 ## About this project
 
-ThunderHub allows you to take full control of your Lightning Node with a slick and awesome UI. Explore all the options that ThunderHub has to offer, from sending and receiving Lightning payments, checking your nodes health statistics and even more advanced options like channel rebalancing and multi-path lightning payments. Managing and monitoring your node has never been easier with transaction reports, graphs and a huge assortment of different features all bundled inside of this great tool.
+Send and receive both Lightning and Bitcoin payments in a simple and easy-to-use interface. Transaction reports provide a quick overview of invoices coming into your node and payments being made. Manage channels, forward payments, and much more with integrations with BTCPay, RaspiBlitz, MyNode, Voltage, Umbrel, and Start9.
