--- a/data/projects/sparrow_wallet.mdx
+++ b/data/projects/sparrow_wallet.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Sparrow Wallet'
 dateAdded: '2022-04-02'
-summary: 'Sparrow Wallet is a Bitcoin only desktop wallet with a focus on security, privacy and usability. Suitable for beginner to advanced users, Sparrow reveals detailed information about a wallet’s configuration, transactions and UTXOs in order to minimise trust and be fully transparent.'
+summary: 'Sparrow is a desktop-only Bitcoin wallet for those who value financial self-sovereignty. Sparrow’s emphasis is on security, privacy, and usability. Sparrow does not hide information from you - on the contrary, it attempts to provide as much detail as possible about your transactions and UTXOs, but in a way that is manageable and usable.'
 nym: 'Craig Raw'
 website: 'https://sparrowwallet.com'
 coverImage: '/static/images/projects/sparrow.png'
@@ -15,26 +15,17 @@ tags: ['Bitcoin', 'Wallet']
 
 ## About this project
 
-Sparrow supports many features:
-• Full support for single sig and multisig wallets on all addressable script types
-• A range of connection options: Public servers, Bitcoin Core and private Electrum servers
-• Standards based including full support for PSBT and TXN files
-• Support for all common hardware wallets in USB and airgapped / QR modes
-• Wallet configuration via output descriptors
-• Full coin and fee control with mempool visualisation
-• Send to multiple outputs with change address selection
-• Native support for fee bumping with RBF and CPFP
-• Labelling of all transactions, addresses, inputs and outputs
-• Lightweight and multi platform (Linux, OSX, Windows)
-• Message signing and verification
-• Import and export to a number of different of wallet formats (incl. Electrum)
-• Show wallets in different tabs, windows or minimised to system tray
-• Payjoin support
-• Anonymous broadcast via public blockchain explorers over Tor
-• Built in Tor client
-• Private blockchain explorer functionality
-• Strong wallet file encryption
-• Testnet, regtest and signet support
+Features:
+- Full support for single sig and multisig wallets on common script types
+- A range of connection options: Public servers, Bitcoin Core, and private Electrum servers
+- Standards-based including full PSBT support
+- Support for all common hardware wallets in USB and air-gapped modes
+- Full coin and fee control with comprehensive coin selection
+- Labeling of all transactions, inputs, and outputs
+- Lightweight and multi-platform
+- Send and receive to PayNyms, both directly (BIP47) and collaboratively
+- Built-in Tor
+- Testnet, regtest and signet support
 
 Sparrow is unique in that it contains a fully featured transaction editor which displays the hexadecimal representation of the transaction as you edit it, allowing easy inspection of the transaction bytes before broadcasting.
 
