Update Zeus project description and summary (#151)
Co-authored-by: Arvin21M <141419722+Arvin21M@users.noreply.github.com>

--- a/data/projects/zeus.mdx
+++ b/data/projects/zeus.mdx
@@ -15,4 +15,4 @@ tags: ['Wallet', 'Lightning']
 
 ## About this project
 
-Zeus lets you take lightning on the go and provides a best in class experience for full node operators running LND, c-lightning, or Eclair. Manage your channels, send and receive on-chain and LN transactions, or manage your routing strategy right in your pocket. Tor is built in to allow you to connect home securely to your node’s hidden services with minimal hassle.
+Zeus is a mobile node management app with the full functionalities of a Bitcoin Lightning wallet that makes Bitcoin payments simple, gives users complete control of their finances, and allows more advanced users to manage their Lightning nodes from the palm of their hand. Zeus offers both Lightning and on-chain accounts with an easy-to-use activity menu and no processing fees. Manage channels and routing fees, and get detailed routing reports. Work-in-progress features include coin control, Taproot support, PBST support, PayJoin, contact lists, and much more!
