--- a/data/blog/vasil-dimov-receives-lts-grant.mdx
+++ b/data/blog/vasil-dimov-receives-lts-grant.mdx
@@ -16,8 +16,7 @@ worked on various improvements, focusing mostly on the networking layer of the
 software. In the last couple of years, he has worked on adding [Tor v3
 support](https://github.com/bitcoin/bitcoin/issues/18884), as well as adding
 support for [I2P](https://github.com/bitcoin/bitcoin/pull/20685) and
-[CJDNS](https://github.com/bitcoin/bitcoin/pull/23077). His [merged
-PRs](https://github.com/bitcoin/bitcoin/pulls?q=is%3Apr+author%3Avasild+is%3Aclosed+sort%3Aupdated-desc)
+[CJDNS](https://github.com/bitcoin/bitcoin/pull/23077). His [review](https://github.com/bitcoin/bitcoin/pulls?q=commenter%3Avasild+-author%3Avasild) and [PRs](https://github.com/bitcoin/bitcoin/pulls?q=is%3Apr+author%3Avasild)
 are a testament to his determination to improve P2P networking and privacy all
 around.
 
@@ -31,8 +30,8 @@ on his
 
 In addition to the various "mini projects" he is working on inside Core, he will
 continue to review pull requests. "I think it is equally important or even more
-important to do review rather than coding," he mentioned to us. "If a PR needs 4
-ACKs to get merged (on average) it means that I have to review 4 PRs for each PR
+important to do review rather than coding," he mentioned to us. "Every PR needs multiple
+ACKs to get merged, so it means that I have to review multiple PRs for each PR
 I have opened myself."
 
 Long-term support for Bitcoin Core developers and similar load-bearing internet
