Fix GitHub link of Bitcoin Q&A

--- a/data/projects/bitcoiner_guide.mdx
+++ b/data/projects/bitcoiner_guide.mdx
@@ -5,7 +5,7 @@ summary: 'A collection of Bitcoin resources.'
 nym: 'Bitcoin QnA'
 website: 'https://bitcoiner.guide/'
 coverImage: '/static/images/projects/bitcoiner_guide.png'
-git: 'https://github.com/BitcoinQ_A'
+git: 'https://github.com/BitcoinQnA'
 twitter: BitcoinQ_A
 zaprite: 'MlJLIBXa2z2zeti8yXos'
 btcpay: 'bitcoiner_guide'
