Add DonateToGeneralFundButton as MDX component

--- a/data/blog/gleb-naumenko-receives-lts-grant.mdx
+++ b/data/blog/gleb-naumenko-receives-lts-grant.mdx
@@ -46,4 +46,8 @@ do."
 Thanks to our generous donors who make this long-term support possible. If you
 want to help us fund the [next
 decade](https://opensats.org/blog/bitcoin-infrastructure-this-decade) of Bitcoin
-infrastructure, please make a donation to our Bitcoin General fund.
+infrastructure, consider making a donation to our Bitcoin General fund:
+
+<center>
+    <DonateToGeneralFundButton/>
+</center>
