Add link to /apply

--- a/data/blog/gleb-naumenko-receives-lts-grant.mdx
+++ b/data/blog/gleb-naumenko-receives-lts-grant.mdx
@@ -51,3 +51,7 @@ infrastructure, consider making a donation to our Bitcoin General fund:
 <center>
     <DonateToGeneralFundButton/>
 </center>
+
+If you are an open-source developer in need for funding, please apply here:
+
+- https://opensats.org/apply
