Incorporate changes from review

--- a/data/blog/gleb-naumenko-receives-lts-grant.mdx
+++ b/data/blog/gleb-naumenko-receives-lts-grant.mdx
@@ -33,10 +33,10 @@ Support from OpenSats will allow Gleb to push the various [Erlay
 PRs](https://bitcoinacks.com/?flt0_author_contains=naumenkogs&search=Erlay)
 forward, facilitating reviewers with necessary feedback, as well as rebasing PRs
 and managing reviews. Aside from his work on Erlay, he will continue to work on
-reviewing other big projects like
-[assumeUTXO](https://bitcoinops.org/en/topics/assumeutxo/), [BIP
-324](https://bips.dev/324/), and [V3 transaction
-relay](https://bitcoinops.org/en/topics/version-3-transaction-relay/).
+reviewing other big projects like [V3 transaction
+relay](https://bitcoinops.org/en/topics/version-3-transaction-relay/), [package
+relay](https://bitcoinops.org/en/topics/package-relay/), and the
+[addrman](https://doxygen.bitcoincore.org/class_addr_man.html) rework.
 
 We love to see our LTS program gaining traction. To quote
 [@jamesob](https://opensats.org/about/jamesob): "Keeping a contributor like Gleb
