--- a/data/blog/nostr-grants-october-2023.mdx
+++ b/data/blog/nostr-grants-october-2023.mdx
@@ -8,6 +8,8 @@ images: ['/static/images/blog/11-nostr-oct.jpg']
 summary: "OpenSats is funding another dozen open-source projects in the nostr ecosystem."
 ---
 
+@import DonateToNostrFundButton from '@components/DonateToNostrFundButton'
+
 You know what the best thing about nostr is? It's not its simple architecture.
 It's not that it has cryptographic proof baked into every action. It's not that
 every note stands on its own. It's not the good vibes, the zaps, or all the
@@ -220,4 +222,6 @@ you. If you would like to contribute to the development of the nostr ecosystem,
 consider making a donation to [The Nostr
 Fund](https://opensats.org/projects/nostr):
 
-[TODO: insert donation button]
+<center>
+    <DonateToNostrFundButton/>
+</center>
