Add "not fucking leaving" video

--- a/data/blog/nostr-grants-october-2023.mdx
+++ b/data/blog/nostr-grants-october-2023.mdx
@@ -183,7 +183,7 @@ Repository: https://github.com/gzuuus/linktr-nostr
 
 License: GPL-3.0
 
-## ONOSENDAI - Cyberspace Meta-Protocol
+## ONOSENDAI
 
 [ONOSENDAI](https://www.onosendai.tech/) is an experimental nostr client that
 maps and visualizes the nostr protocol in a 3D space. The goal of ONOSENDAI is
@@ -214,6 +214,8 @@ License: MIT / LGPL-3.0
 ---
 
 Nostr is not fucking leaving, and neither are we.
+
+<VideoPlayer src="/static/videos/not-leaving.mov"/>
 
 Support for the nostr projects above is made possible by generous donors like
 you. If you would like to contribute to the development of the nostr ecosystem,
