Formatting & move button up

--- a/data/blog/nostr-grants-october-2023.mdx
+++ b/data/blog/nostr-grants-october-2023.mdx
@@ -32,34 +32,32 @@ what a lovely coincidence!
 
 Without further ado, here are the projects that we selected for funding:
 
-- Nozzle by
-[@dluvian](https://njump.me/npub1useke4f9maul5nf67dj0m9sq6jcsmnjzzk4ycvldwl4qss35fvgqjdk5ks)
-- Blowater by [Water
-Blower](https://njump.me/npub1dww6jgxykmkt7tqjqx985tg58dxlm7v83sa743578xa4j7zpe3hql6pdnf)
-- Nostur by
-[Fabian](https://njump.me/npub1n0sturny6w9zn2wwexju3m6asu7zh7jnv2jt2kx6tlmfhs7thq0qnflahe)
-- Nostrocket by
-[@gsovereignty](https://njump.me/npub1mygerccwqpzyh9pvp6pv44rskv40zutkfs38t0hqhkvnwlhagp6s3psn5p)
-- snort.social by
-[Kieran](http://npub1v0lxxxxutpvrelsksy8cdhgfux9l6a42hsj2qzquu2zk7vc9qnkszrqj49)
-- zap.stream by
-[Kieran](http://npub1v0lxxxxutpvrelsksy8cdhgfux9l6a42hsj2qzquu2zk7vc9qnkszrqj49)
-- algia & other tools by
-[@mattn](https://njump.me/npub1937vv2nf06360qn9y8el6d8sevnndy7tuh5nzre4gj05xc32tnwqauhaj6)
-- nostr.watch by
-[@sandwich](https://njump.me/npub1uac67zc9er54ln0kl6e4qp2y6ta3enfcg7ywnayshvlw9r5w6ehsqq99rx)
-- relay.tools by
-[@cloudfodder](https://njump.me/npub10npj3gydmv40m70ehemmal6vsdyfl7tewgvz043g54p0x23y0s8qzztl5h)
-- Nostree by
-[@gzuuus](https://njump.me/npub1gzuushllat7pet0ccv9yuhygvc8ldeyhrgxuwg744dn5khnpk3gs3ea5ds)
-- ONOSENDAI by
-[@arkin0x](https://njump.me/npub1arkn0xxxll4llgy9qxkrncn3vc4l69s0dz8ef3zadykcwe7ax3dqrrh43w)
-- 0xchat by
-[@water783](https://njump.me/npub10td4yrp6cl9kmjp9x5yd7r8pm96a5j07lk5mtj2kw39qf8frpt8qm9x2wl)
+- Nozzle by [@dluvian](https://njump.me/npub1useke4f9maul5nf67dj0m9sq6jcsmnjzzk4ycvldwl4qss35fvgqjdk5ks)
+- Blowater by [Water Blower](https://njump.me/npub1dww6jgxykmkt7tqjqx985tg58dxlm7v83sa743578xa4j7zpe3hql6pdnf)
+- Nostur by [Fabian](https://njump.me/npub1n0sturny6w9zn2wwexju3m6asu7zh7jnv2jt2kx6tlmfhs7thq0qnflahe)
+- Nostrocket by [@gsovereignty](https://njump.me/npub1mygerccwqpzyh9pvp6pv44rskv40zutkfs38t0hqhkvnwlhagp6s3psn5p)
+- snort.social by [Kieran](http://npub1v0lxxxxutpvrelsksy8cdhgfux9l6a42hsj2qzquu2zk7vc9qnkszrqj49)
+- zap.stream by [Kieran](http://npub1v0lxxxxutpvrelsksy8cdhgfux9l6a42hsj2qzquu2zk7vc9qnkszrqj49)
+- algia & other tools by [@mattn](https://njump.me/npub1937vv2nf06360qn9y8el6d8sevnndy7tuh5nzre4gj05xc32tnwqauhaj6)
+- nostr.watch by [@sandwich](https://njump.me/npub1uac67zc9er54ln0kl6e4qp2y6ta3enfcg7ywnayshvlw9r5w6ehsqq99rx)
+- relay.tools by [@cloudfodder](https://njump.me/npub10npj3gydmv40m70ehemmal6vsdyfl7tewgvz043g54p0x23y0s8qzztl5h)
+- Nostree by [@gzuuus](https://njump.me/npub1gzuushllat7pet0ccv9yuhygvc8ldeyhrgxuwg744dn5khnpk3gs3ea5ds)
+- ONOSENDAI by [@arkin0x](https://njump.me/npub1arkn0xxxll4llgy9qxkrncn3vc4l69s0dz8ef3zadykcwe7ax3dqrrh43w)
+- 0xchat by [@water783](https://njump.me/npub10td4yrp6cl9kmjp9x5yd7r8pm96a5j07lk5mtj2kw39qf8frpt8qm9x2wl)
 
-As always, let's spend some time to look at these projects in more detail:
+The projects above have received grants of various durations and sizes, and we
+have more nostr-related applications in the pipeline. Our financial support for
+nostr projects is made possible by generous donors like you. If you would like
+to contribute to the development of the nostr ecosystem, consider making a
+donation to [The Nostr Fund](https://opensats.org/projects/nostr):
+
+<center>
+    <DonateToNostrFundButton/>
+</center>
 
 ---
+
+As always, let's spend some time to look at these projects in more detail:
 
 ## Nozzle
 
@@ -213,15 +211,8 @@ License: MIT / LGPL-3.0
 
 ---
 
-Nostr is not fucking leaving, and neither are we.
+In short: Nostr is not fucking leaving, and neither are we.
 
 <VideoPlayer src="/static/videos/not-leaving.mov"/>
 
-Support for the nostr projects above is made possible by generous donors like
-you. If you would like to contribute to the development of the nostr ecosystem,
-consider making a donation to [The Nostr
-Fund](https://opensats.org/projects/nostr):
-
-<center>
-    <DonateToNostrFundButton/>
-</center>
+Onwards!
