Add ODELL as co-author

--- a/data/blog/nostr-grants-october-2023.mdx
+++ b/data/blog/nostr-grants-october-2023.mdx
@@ -3,7 +3,7 @@ title: "Third Wave of Nostr Grants"
 date: '2023-10-18'
 tags: ['OpenSats', 'grants', 'nostr']
 draft: false
-authors: ['dergigi']
+authors: ['dergigi', 'odell']
 images: ['/static/images/blog/11-nostr-oct.jpg']
 summary: "OpenSats is funding another dozen open-source projects in the nostr ecosystem."
 ---
