Add video attribution

--- a/data/blog/nostr-grants-october-2023.mdx
+++ b/data/blog/nostr-grants-october-2023.mdx
@@ -204,3 +204,7 @@ In short: Nostr is not fucking leaving, and neither are we.
 <VideoPlayer src="/static/videos/not-leaving.mov"/>
 
 Onwards!
+
+---
+
+_h/t to [Lauren](https://njump.me/nevent1qqsg3tt4y0n37r4px3n8t3vpplgvz8u86zrngxe4egxq2stwz3zta3gpzpmhxue69uhkummnw3ezuamfdejsyg9dlcn4vprj65tgc70gypclztmmvquum996ve89f2z4cd7gpuwhxupsgqqqqqqs5r37v0) for creating the above video perfectly and in no time._
