--- a/data/blog/nostr-grants-october-2023.mdx
+++ b/data/blog/nostr-grants-october-2023.mdx
@@ -122,9 +122,9 @@ License: MIT
 
 [Zap.stream](https://zap.stream/) is a live streaming nostr client PWA that
 allows people to interact with externally hosted HLS streams. Users can chat,
-zap, and react to the stream while watching a live stream. The goal of
-[zap.stream](https://zap.stream/) is to create a nostr alternative to
-[twitch.tv](https://www.twitch.tv/) and similar online streaming platforms.
+zap, and react to the stream while watching a live stream. The goal of the
+project is to create a nostr alternative to [twitch.tv](https://www.twitch.tv/)
+and similar online streaming platforms.
 
 Repository: https://git.v0l.io/Kieran/stream  
 License: MIT
