Remove "Bitcoin" from General Fund

--- a/data/blog/gleb-naumenko-receives-lts-grant.mdx
+++ b/data/blog/gleb-naumenko-receives-lts-grant.mdx
@@ -46,7 +46,8 @@ do."
 Thanks to our generous donors who make this long-term support possible. If you
 want to help us fund the [next
 decade](https://opensats.org/blog/bitcoin-infrastructure-this-decade) of Bitcoin
-infrastructure, consider making a donation to our Bitcoin General fund:
+infrastructure, consider making a donation to our [General
+Fund](https://opensats.org/projects/general_fund):
 
 <center>
     <DonateToGeneralFundButton/>
