Refactor to properly use DesignTeam component

--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -15,7 +15,9 @@ charge of making the user-facing side of nostr better, prettier, more intuitive,
 and more accessible. And since all good things come in threes, we're pleased to
 announce a new addition to the OpenSats design team: Niel Liesmons.
 
-[INSERT DESIGN TEAM CIRCLE VIEW]
+<center>
+    <DesignTeam/>
+</center>
 
 Niel is an Industrial Designer who is now bringing his years of making beautiful
 and convincing presentations for his designs to the world of nostr UI & UX. 
