--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -49,6 +49,8 @@ Are you working on an open-source project that needs some design help? Want to
 improve the UX of your app? Reach out to design@opensats.org or to Karnage &
 Daniele directly.
 
+<DesignTeam/>
+
 [Karnage]: /about/karnage
 [Daniele]: /about/dtonon
 
