--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Niel Liesmons Joins the OpenSats Design Initiative"
+title: "Niel Liesmons Joins OpenSats Design"
 date: '2023-10-19'
 tags: ['OpenSats', 'nostr', 'design']
 draft: false
