--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -3,7 +3,7 @@ title: "Niel Liesmons Joins OpenSats Design"
 date: '2023-10-19'
 tags: ['OpenSats', 'nostr', 'design']
 draft: false
-authors: ['karnage']
+authors: ['dergigi', 'karnage']
 images: ['/static/images/blog/13-nostr-design.jpg']
 summary: "The Nostr Design initiative grows and has its first results to show."
 ---
@@ -13,7 +13,7 @@ help "take nostr mainstream," to quote our furry friend with purple-colored
 glasses. As Karnage wrote in last month's post, he and Daniele are leading the
 charge of making the user-facing side of nostr better, prettier, more intuitive,
 and more accessible. And since all good things come in threes, we're pleased to
-announce a new addition to the OpenSats design team: Niel Liesmons.
+announce a new addition to the OpenSats design team: [Niel Liesmons][niel].
 
 <center>
     <DesignTeam/>
@@ -63,3 +63,5 @@ Spring in its current shape is based on NostrDesign recommendations
 
 Thoughts? Suggestions? Feedback? Let's hear it all. Reach out to us on nostr or
 write us at design@opensats.org
+
+[niel]: /about/niel
