--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -37,7 +37,7 @@ Yes, the user experience of most nostr clients still has long ways to go.
 However, it's useful to remind ourselves of where we've been just 18 months ago.
 The best-in-class nostr clients looked something like this:
 
-[INSERT SCREENSHOTS]
+[![](/static/images/blog/old-nostr-screenshot.png)](https://slidestr.net/p/npub12a6l9kd22e0hrhsejygy0mygmjll0azl2cqksje3e7rzm3qg8m7skc6e3w)
 
 Some nostr OGs will look at these screenshots with a smile that only nostalgia
 can produce. All great things have humble beginnings, and nostr is no exception.
