--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -9,7 +9,7 @@ summary: "The Nostr Design initiative grows and has its first results to show."
 ---
 
 A couple of weeks ago, we announced the Nostr Design initiative, which aims to
-help "take nostr mainstream," to quote our furry friend with purple-colored
+help "[take nostr mainstream][ms]," to quote our furry friend with purple-colored
 glasses. As Karnage wrote in last month's post, he and Daniele are leading the
 charge of making the user-facing side of nostr better, prettier, more intuitive,
 and more accessible. And since all good things come in threes, we're pleased to
@@ -20,12 +20,12 @@ announce a new addition to the OpenSats design team: [Niel Liesmons][niel].
 </center>
 
 Niel is an Industrial Designer who is now bringing his years of making beautiful
-and convincing presentations for his designs to the world of nostr UI & UX. 
+and convincing presentations for his designs to the world of nostr UI & UX.
 
 In addition to welcoming Neil, we want to take a minute to reflect on where
 we've been, where we are now, and where we might go in the future. Not in terms
 of the nitty-gritty of the nostr protocol, but in terms of the user-facing side
-of things. 
+of things.
 
 Undoubtedly, nostr clients have come a long way. The days of incredibly clunky
 and buggy clients are mostly behind us, and, luckily, you don't need to be a
@@ -39,29 +39,32 @@ The best-in-class nostr clients looked something like this:
 
 [![](/static/images/blog/old-nostr-screenshot.png)](https://slidestr.net/p/npub12a6l9kd22e0hrhsejygy0mygmjll0azl2cqksje3e7rzm3qg8m7skc6e3w)
 
-Some nostr OGs will look at these screenshots with a smile that only nostalgia
-can produce. All great things have humble beginnings, and nostr is no exception.
-Most great things adapt, evolve, and improve over time. And nostr is no
-exception in that regard either.
+Okay, okay. I exaggerate. But not by much! Some nostr OGs will look at this
+screenshot with a smile that only nostalgia can produce. All great things have
+humble beginnings, and nostr is no exception.  Most great things adapt, evolve,
+and improve over time. And nostr is no exception in that regard either.
 
 As more developers and designers join the flock of nostriches that cares about a
 social web that is free as in speech, the UX of nostr clients is bound to
 improve. We hope that a resource like Nostr Design as well as active client
 reviews such as the one below will help along the way.
 
-TODO: Embed https://www.youtube.com/watch?v=7zuCwmS--dY
+TODO: Embed <https://www.youtube.com/watch?v=7zuCwmS--dY>
 
 We've got great feedback—from developers and designers alike—for the Nostr
 Design resource that was put together over the course of the last months.
 Karnage, Daniele, and Niel will continually improve NostrDesign.org, so please
 keep your feedback coming!
 
-And if it was useful to you, please let us know too! Here's some success stories
-of Nostr Design so far: Lume improved their onboarding based on our feedback
-0xchat made various UI improvements noStrudel is implementing recommendations
-Spring in its current shape is based on NostrDesign recommendations
+And if it was useful to you, please let us know too! Here's some success stories of Nostr Design so far:
+
+- [Lume](https://lume.nu/) improved their onboarding based on our feedback
+- [0xchat](https://github.com/0xchat-app) made various UI improvements
+- [noStrudel](https://nostrudel.ninja/) is implementing recommendations
+- [Spring](https://spring.site/) in its current shape is based on NostrDesign recommendations
 
 Thoughts? Suggestions? Feedback? Let's hear it all. Reach out to us on nostr or
-write us at design@opensats.org
+write us at <design@opensats.org>
 
 [niel]: /about/niel
+[ms]: https://opensats.org/blog/announcing-nostr-design
