Fix markdown error

--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -49,7 +49,7 @@ social web that is free as in speech, the UX of nostr clients is bound to
 improve. We hope that a resource like Nostr Design as well as active client
 reviews such as the one below will help along the way.
 
-TODO: Embed <https://www.youtube.com/watch?v=7zuCwmS--dY>
+TODO: Embed https://www.youtube.com/watch?v=7zuCwmS--dY
 
 We've got great feedback—from developers and designers alike—for the Nostr
 Design resource that was put together over the course of the last months.
