--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -64,7 +64,7 @@ And if it was useful to you, please let us know too! Here's some success stories
 - [Spring](https://spring.site/) in its current shape is based on NostrDesign recommendations
 
 Thoughts? Suggestions? Feedback? Let's hear it all. Reach out to us on nostr or
-write us at <design@opensats.org>
+write us at design@opensats.org
 
 [niel]: /about/niel
 [ms]: https://opensats.org/blog/announcing-nostr-design
