--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -22,7 +22,7 @@ announce a new addition to the OpenSats design team: [Niel Liesmons][niel].
 Niel is an Industrial Designer who is now bringing his years of making beautiful
 and convincing presentations for his designs to the world of nostr UI & UX.
 
-In addition to welcoming Neil, we want to take a minute to reflect on where
+In addition to welcoming Niel, we want to take a minute to reflect on where
 we've been, where we are now, and where we might go in the future. Not in terms
 of the nitty-gritty of the nostr protocol, but in terms of the user-facing side
 of things.
