--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -49,6 +49,8 @@ social web that is free as in speech, the UX of nostr clients is bound to
 improve. We hope that a resource like Nostr Design as well as active client
 reviews such as the one below will help along the way.
 
+<YouTubeEmbed videoId="7zuCwmS--dY"/>
+
 TODO: Embed https://www.youtube.com/watch?v=7zuCwmS--dY
 
 We've got great feedback—from developers and designers alike—for the Nostr
