--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -20,7 +20,10 @@ announce a new addition to the OpenSats design team: [Niel Liesmons][niel].
 </center>
 
 Niel is an Industrial Designer who is now bringing his years of making beautiful
-and convincing presentations for his designs to the world of nostr UI & UX.
+and convincing presentations for his designs to the world of nostr UI & UX. He
+will help make [NostrDesign.org][nd] and the clients that implement its best practices
+better and more beautiful, which is another way of saying easier to understand
+and use.
 
 In addition to welcoming Niel, we want to take a minute to reflect on where
 we've been, where we are now, and where we might go in the future. Not in terms
@@ -51,20 +54,26 @@ reviews such as the one below will help along the way.
 
 <YouTubeEmbed videoId="7zuCwmS--dY"/>
 
-We've got great feedback—from developers and designers alike—for the Nostr
-Design resource that was put together over the course of the last months.
+We've got great feedback—from developers and designers alike—for the [Nostr
+Design][nd] resource that was put together over the course of the last months.
 Karnage, Daniele, and Niel will continually improve NostrDesign.org, so please
 keep your feedback coming!
 
-And if it was useful to you, please let us know too! Here's some success stories of Nostr Design so far:
+Here's some success stories that developers have shared with us:
 
 - [Lume](https://lume.nu/) improved their onboarding based on our feedback
 - [0xchat](https://github.com/0xchat-app) made various UI improvements
 - [noStrudel](https://nostrudel.ninja/) is implementing recommendations
 - [Spring](https://spring.site/) in its current shape is based on NostrDesign recommendations
 
-Thoughts? Suggestions? Feedback? Let's hear it all. Reach out to us on nostr or
-write us at design@opensats.org
+The short list above is far from exhaustive. A lot of the work is currently
+ongoing and in early stages.
+
+If the work we are doing was useful to you, please let us know! Reach out to us
+on nostr or write us at design@opensats.org. We're happy to hear any and all
+thoughts, suggestions, ideas for improvement, as well as have lively discussions on how to best
+design the strange and beautiful experience that is nostr.
 
 [niel]: /about/niel
 [ms]: https://opensats.org/blog/announcing-nostr-design
+[nd]: https://nostrdesign.org
