Add Niel to /nostr

--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -43,17 +43,21 @@ actively involved in the design of major clients, most notably Gossip and
 Coracle, as well as various tools such as the static content gateway that is
 part of *nostr.com*.
 
+The third one is [Niel], who is an Industrial Designer who is now bringing his
+years of making beautiful and convincing presentations for his designs to the
+world of nostr UI & UX.
+
 ## Need Help?
 
 Are you working on an open-source project that needs some design help? Want to
 improve the UX of your app? Reach out to design@opensats.org or to Karnage &
 Daniele directly.
 
-<DesignTeam/>
+<DesignTeam />
 
 [Karnage]: /about/karnage
 [Daniele]: /about/dtonon
+[Niel]: /about/niel
 
 [apply]: /apply
 [mission]: /mission
-
