--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -30,7 +30,7 @@ comprehensive resource offering product design considerations, design
 principles, and best practices that will help developers solve the unique user
 experience challenges that nostr poses.
 
-In addition to nostrdesign.org, two of our grantees are dedicating time to help
+In addition to nostrdesign.org, three of our grantees are dedicating time to help
 projects that need help with design and general UI/UX improvements.
 
 The first one is [Karnage], who brings a lot of experience and expertise from
