Link to initiative in the end; update links

--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -54,10 +54,10 @@ reviews such as the one below will help along the way.
 
 <YouTubeEmbed videoId="7zuCwmS--dY"/>
 
-We've got great feedback—from developers and designers alike—for the [Nostr
-Design][nd] resource that was put together over the course of the last months.
-Karnage, Daniele, and Niel will continually improve NostrDesign.org, so please
-keep your feedback coming!
+We've got great feedback—from developers and designers alike—for the Nostr
+Design resource that was put together over the course of the last months.
+Karnage, Daniele, and Niel will continually improve [NostrDesign.org][nd], so
+please keep your feedback coming!
 
 Here's some success stories that developers have shared with us:
 
@@ -73,6 +73,9 @@ If the work we are doing was useful to you, please let us know! Reach out to us
 on nostr or write us at design@opensats.org. We're happy to hear any and all
 thoughts, suggestions, ideas for improvement, as well as have lively discussions on how to best
 design the strange and beautiful experience that is nostr.
+
+We have great plans for [our design initiative](/nostr/#nostr-design) and can't
+wait to see all the amazing stuff that is going to be built. Onwards!
 
 [niel]: /about/niel
 [ms]: https://opensats.org/blog/announcing-nostr-design
