Add link to blog post in Niel's profile

--- a/data/authors/niel.mdx
+++ b/data/authors/niel.mdx
@@ -13,8 +13,10 @@ design: true
 Niel is an Industrial Designer that got into regenerative farming because he saw
 no way out of the inflationary debt spiral we find ourselves in. After properly
 having been exposed to how Bitcoin fixes this and then discovering how nostr
-builds an interoperable web on top of it, he’s now bringing his years of making
+builds an interoperable web on top of it, he’s [now bringing] his years of making
 beautiful and convincing presentations for his Industrial Designs to the world
 of nostr UI/UX.
 
 Family, Farming and Freedom Tech are what drive him.
+
+[now bringing]: /blog/niel-liesmons-joins-the-opensats-design-initiative
