Apply suggestions from code review
Co-authored-by: Arvin21M <141419722+Arvin21M@users.noreply.github.com>

--- a/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
+++ b/data/blog/niel-liesmons-joins-the-opensats-design-initiative.mdx
@@ -55,7 +55,7 @@ reviews such as the one below will help along the way.
 <YouTubeEmbed videoId="7zuCwmS--dY"/>
 
 We've got great feedback—from developers and designers alike—for the Nostr
-Design resource that was put together over the course of the last months.
+Design resource that was put together over the course of the last few months.
 Karnage, Daniele, and Niel will continually improve [NostrDesign.org][nd], so
 please keep your feedback coming!
 
