Blog Post: Niel Liesmons Joins OpenSats Design (#155)
Co-authored-by: Arvin21M <141419722+Arvin21M@users.noreply.github.com>

--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -30,7 +30,7 @@ comprehensive resource offering product design considerations, design
 principles, and best practices that will help developers solve the unique user
 experience challenges that nostr poses.
 
-In addition to nostrdesign.org, two of our grantees are dedicating time to help
+In addition to nostrdesign.org, three of our grantees are dedicating time to help
 projects that need help with design and general UI/UX improvements.
 
 The first one is [Karnage], who brings a lot of experience and expertise from
@@ -43,15 +43,21 @@ actively involved in the design of major clients, most notably Gossip and
 Coracle, as well as various tools such as the static content gateway that is
 part of *nostr.com*.
 
+The third one is [Niel], who is an Industrial Designer who is now bringing his
+years of making beautiful and convincing presentations for his designs to the
+world of nostr UI & UX.
+
 ## Need Help?
 
 Are you working on an open-source project that needs some design help? Want to
 improve the UX of your app? Reach out to design@opensats.org or to Karnage &
 Daniele directly.
 
+<DesignTeam />
+
 [Karnage]: /about/karnage
 [Daniele]: /about/dtonon
+[Niel]: /about/niel
 
 [apply]: /apply
 [mission]: /mission
-
