Apply suggestions from code review
Co-authored-by: Matt Morehouse <mattmorehouse@gmail.com>

--- a/data/blog/matt-morehouse-lightning-security-lts-grant.mdx
+++ b/data/blog/matt-morehouse-lightning-security-lts-grant.mdx
@@ -35,7 +35,7 @@ security and robustness of the network. Adding new features like dual funded
 channels, Taproot channels, splicing, and BOLT 12 is still the main priority for
 most developers and users, but all these features introduce added complexity.
 "Complexity is the worst enemy of security," to quote Bruce Schneier, "and our
-systems are getting more complex all the time." Including Lightning.  Matt's
+systems are getting more complex all the time." Lightning is no exception.  Matt's
 research and fuzz testing of Lightning implementations is an effort to
 counteract this trend.
 
