Update git link of general_fund.mdx

--- a/data/projects/general_fund.mdx
+++ b/data/projects/general_fund.mdx
@@ -5,7 +5,7 @@ summary: 'We help you find and support open-source Bitcoin projects - helping cr
 nym: 'OpenSats'
 website: 'https://opensats.org'
 coverImage: '/static/images/projects/opensats_logo.png'
-git: 'opensats'
+git: 'https://github.com/OpenSats'
 twitter: 'opensats'
 hidden: false
 bonusUSD: 4670000
