Add link to LTS program

--- a/data/blog/furszy-receives-lts-grant-for-bitcoin-core.mdx
+++ b/data/blog/furszy-receives-lts-grant-for-bitcoin-core.mdx
@@ -53,7 +53,7 @@ own addresses. This feature leverages the existing [BIP 157] and [BIP 158]
 network protocols, enabling the usage of the core wallet on limited storage and
 network-constrained devices, as well as in restrictive countries.
 
-The OpenSats long-term support program is sourced from our General Fund and made
+The OpenSats [Long-Term Support program][LTS] is sourced from our General Fund and made
 possible by generous donors like you. If you want to help support contributors
 like Furszy, consider making a donation to the General Fund:
 
@@ -65,3 +65,4 @@ like Furszy, consider making a donation to the General Fund:
 [BIP 158]: https://github.com/bitcoin/bips/blob/master/bip-0158.mediawiki
 [PRs]: https://bitcoinacks.com/?flt0_author_contains=furszy
 [reviews]: https://bitcoinacks.com/?flt0_reviewer_contains=furszy
+[LTS]: /blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors
