Link to furszy github profile

--- a/data/blog/furszy-receives-lts-grant-for-bitcoin-core.mdx
+++ b/data/blog/furszy-receives-lts-grant-for-bitcoin-core.mdx
@@ -8,7 +8,7 @@ images: ['/static/images/blog/15-furszy.jpg']
 summary: "OpenSats Welcomes Furszy as an LTS Grantee."
 ---
 
-OpenSats is proud to welcome our newest LTS grantee, Furszy. Furszy is receiving
+OpenSats is proud to welcome our newest LTS grantee, [Furszy][https://github.com/furszy]. Furszy is receiving
 long-term support for his contributions to Bitcoin Core.
 
 He joined as a Core developer in June 2022 and has been actively involved in a
