Add link to furszy' github

--- a/data/blog/furszy-receives-lts-grant-for-bitcoin-core.mdx
+++ b/data/blog/furszy-receives-lts-grant-for-bitcoin-core.mdx
@@ -8,7 +8,7 @@ images: ['/static/images/blog/15-furszy.jpg']
 summary: "OpenSats Welcomes Furszy as an LTS Grantee."
 ---
 
-OpenSats is proud to welcome our newest LTS grantee, [Furszy](https://github.com/furszy). Furszy is receiving
+OpenSats is proud to welcome our newest LTS grantee, [Furszy][Furszy Github]. Furszy is receiving
 long-term support for his contributions to Bitcoin Core.
 
 He joined as a Core developer in June 2022 and has been actively involved in a
@@ -66,3 +66,4 @@ like Furszy, consider making a donation to the General Fund:
 [PRs]: https://bitcoinacks.com/?flt0_author_contains=furszy
 [reviews]: https://bitcoinacks.com/?flt0_reviewer_contains=furszy
 [LTS]: /blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors
+[Furszy Github]: https://github.com/furszy
