--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -16,8 +16,8 @@ education and research initiatives.
 We want to see contributors to Bitcoin and FOSS (free and open-source) tools
 supported by a sustainable ecosystem and consistent funding, so we set up a
 platform to do just that. Donors can come to the OpenSats web platform and
-either recommend gifts to specific project areas or contribute to our general
-fund.
+either recommend gifts to [specific projects](/projects) or contribute to our
+[general fund][gf].
 
 Grants are distributed quarterly by our board. We evaluate and assess
 applications to make sure any grants are awarded to high impact projects in the
@@ -31,3 +31,4 @@ making process of OpenSats, so we created a transparent, public-facing, and
 accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
 ensure the survival of free and open-source technology like Bitcoin.
+[gf]: /projects/general_fund
